Changed The Color

--- a/style.css
+++ b/style.css
@@ -23,7 +23,7 @@ header {
 
 .logo{
     text-decoration: none;
-    color: #3a6cf4;
+    color: #4e9eff;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 1.8em;
